--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </form>
 
         <div class="example-steps">
+          <h2>Алгоритм:</h2>
           <p>
             Шаг 1. Выбирается факторная база S = {p<sub>1</sub>, p<sub>2</sub>,
             p<sub>3</sub>, ..., p<sub>t</sub>}. (Если G = Z<sub>p</sub
@@ -57,20 +58,18 @@
           <p>
             Шаг 4. Логарифмируя обе части получившегося выражения, получаем
             <br />
-            k ≡ ∑<sub>i=1</sub><sup>t</sup> a<sub>i</sub> log<sub>g</sub>p<sub
-              >i</sub
-            >
-            (mod n) *
+            k ≡ ∑<sub>i=1</sub><sup>t</sup> a<sub>i</sub>
+            log<sub>g</sub>(p<sub>i</sub>) (mod n) *
             <br />
             В этом выражении неизвестными являются логарифмы. <br />
             Это сравнение с t неизвестными следует запомнить.
           </p>
           <p>
-            Шаг 5. Если сравнений вида (*), полученных на Шаге 4, меньше, чем
-            t+c, то вернуться на Шаг 2.
+            Шаг 5. Если сравнений вида (*), полученных на Шаге 4, меньше, чем t
+            + c, то вернуться на Шаг 2.
           </p>
           <p>
-            Шаг 6. Решить систему t+c сравнений с t неизвестными вида (*),
+            Шаг 6. Решить систему t + c сравнений с t неизвестными вида (*),
             составленную на Шагах 2-5.
           </p>
           <p>
@@ -85,14 +84,14 @@
           <p>
             Шаг 9. Логарифмируя обе части последнего равенства, получаем <br />
             x = log<sub>g</sub>a = ∑<sub>i=1</sub><sup>t</sup> b<sub>i</sub>
-            log<sub>g</sub>p<sub>i</sub> - k (mod n),
+            log<sub>g</sub>(p<sub>i</sub>) - k (mod n),
             <br />
-            где log<sub>g</sub>p<sub>i</sub> (1 ≤ i ≤ t) вычисленны на Шаге 6
+            где log<sub>g</sub>(p<sub>i</sub>) (1 ≤ i ≤ t) вычисленны на Шаге 6
             как решение системы сравнений.
           </p>
           <p>
             Выход: <br />
-            x = log<sub>g</sub>a mod n.
+            x = log<sub>g</sub>(a) mod n.
           </p>
         </div>
 
