--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <button id="startPageBtn" class="start-page-btn">
+      <img src="./img/up-arrow.png" alt="" />
+    </button>
     <div class="wrapper">
       <h1>Алгоритм исчисления порядка</h1>
 
